changes for cucumber testing

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+test: &test
   <<: *default
   database: blog-unittest_test
 
@@ -50,5 +50,8 @@ test:
 production:
   <<: *default
   database: blog-unittest_production
-  username: blog-unittest
-  password: <%= ENV['BLOG-UNITTEST_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= CONFIG["BLOG-UNITTEST_DATABASE_PASSWORD"] %>
+
+cucumber:
+  <<: *test
